--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header class="text-center p-3 bg-dark text-white">
-        <h1>Projet</h1>
+        <h1>HyperSaga</h1>
         <nav>
             <a class="navbar-brand" href="#"><img src="index0.webp" width="50" height="50" ></a>
             <ul class="nav nav-pills justify-content-center">
@@ -106,7 +106,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="" class="card-img-top" alt="Membre de l'equipe">
+                        <img src="about1.webp" class="card-img-top" alt="Membre de l'equipe">
                         <div class="card-body" id="team">
                             <h5 class="card-title">Belahrach Alaa-Co-Fondateur & Développeur</h5>
                             <p class="card-text">Etudiant en informatique et développement, Belahrach Alaa est le cerveau technique derrière HyperSaga. Grace à son expertise en programmation et en conception web, il assure le bon fonctionnement de la plateforme et son évolution constante. </p>
@@ -117,7 +117,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="" class="card-img-top" alt="Membre de l'equipe">
+                        <img src="about2.webp" class="card-img-top" alt="Membre de l'equipe">
                         <div class="card-body" id="team">
                             <h5 class="card-title">Nassr Yasser-Co-Fondateur & Développeur</h5>
                             <p class="card-text">Créative dans l'ame, Nassr Yasser est le visionnaire qui donne vie aux événements fictifs d'HyperSaga. Grace à son imagination débordante et son sens du storytelling, il concoit des univers captivants et des scénarios uniques qui transportent les participants dans des mondes extraordinaires.</p>
