--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <header class="text-center p-3 bg-dark text-white">
-        <h1>Projet</h1>
+        <h1>HyperSaga</h1>
         <nav>
             <a class="navbar-brand" href="#"><img src="index0.webp" width="50" height="50" ></a>
             <ul class="nav nav-pills justify-content-center">
@@ -114,6 +114,14 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Envoyer</button>
             </form>
+        </section>
+        <section class="container my-4">
+            <h2 class="mb-4">Nos coordonnées</h2>
+            <p><strong>Adresse :</strong>Rabat,Hay Riad</p>
+            <p><strong>Téléphone :</strong>+212 6 89 91 55 28</p>
+        </section>
+        <section class="container justify-content-center alighn-items-center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.6665642467533!2d-6.824834309380218!3d33.97540878023826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda76b4f68bd1af5%3A0x2d29e9cb57562c07!2sComplexe%20de%20Formation%20Professionnelle_Hay%20Nahda!5e0!3m2!1sfr!2sma!4v1740101992805!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <footer class="text-center p-3 bg-dark text-white">
