--- a/event.html
+++ b/event.html
@@ -111,7 +111,7 @@
             <div id="eventCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="mawazine1.jpeg" class="d-block w-100" alt="Image de l'événement">
+                        <img src="mawazine1.jpg" class="d-block w-100" alt="Image de l'événement">
                     </div>
                     <div class="carousel-item">
                         <img src="0.jpg" class="d-block w-100" alt="Image de l'événement">
@@ -129,7 +129,84 @@
                    <span class="sr-only">Next</span>
                 </a>
             </div>
-            
+            <h2>Détail de l'Événement</h2>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Festival Mawazine - Rythmes du Monde</h5>
+                    <p class="card-text">Un événement musical d’envergure internationale au Maroc
+                        Le Festival Mawazine – Rythmes du Monde est un événement musical de renommée internationale,
+                        organisé chaque année à Rabat, Maroc. Créé en 2001 par l'association Maroc Cultures sous le Haut
+                        Patronage de Sa Majesté le Roi Mohammed VI, il vise à promouvoir la diversité culturelle et à
+                        rendre la musique accessible à tous. Avec plus de 2,5 millions de spectateurs lors de ses
+                        éditions précédentes, Mawazine est aujourd’hui l’un des plus grands festivals au monde.</p>
+                    <p class="card-text">Le festival se distingue par une programmation éclectique réunissant des
+                        artistes de renommée mondiale ainsi que des talents émergents du Maroc et d’ailleurs. Chaque
+                        année, Mawazine accueille des musiciens de divers horizons musicaux : pop, rock, rap, électro,
+                        jazz, musique orientale, africaine et latine.<br>Parmi les artistes qui ont marqué les
+                        précédentes éditions :<br>
+                    <ul>
+                        <li>Icônes internationales : Rihanna, Mariah Carey, Shakira, The Weeknd, Coldplay, Jennifer
+                            Lopez, Bruno Mars.</li>
+                        <li>Stars de la musique arabe : Kadim Al Sahir, Majida El Roumi, Nancy Ajram, Saad Lamjarred,
+                            Amr Diab.</li>
+                        <li>Références africaines : Youssou N'Dour, Oumou Sangaré, Angélique Kidjo, Magic System.</li>
+                        <li>Scène marocaine : Oum, Nass El Ghiwane, Douzi, Hatim Ammor, Manal Benchlikha.</li>
+                    </ul><br>La programmation de Mawazine 2025 promet d’être tout aussi prestigieuse, avec des artistes
+                    internationaux et marocains de premier plan.
+
+                    </p>
+                    <p class="card-text">Lieu : Rabat, Maroc</p>
+                    <p class="card-text">Date : 06/2025</p>
+                    <a href="#" class="btn btn-primary">S'inscrire</a>
+                </div>
+            </div>
+            <h2>Détail de l'Événement</h2>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Coupe d'Afrique des Nations (CAN) 2025</h5>
+                    <p class="card-text">La Coupe d'Afrique des Nations 2025 (CAN 2025) est la 35ᵉ édition du plus prestigieux tournoi de football africain organisé par la Confédération Africaine de Football (CAF). Cette édition se tiendra au Maroc du 21 décembre 2025 au 18 janvier 2026, faisant de ce pays l’hôte officiel de la compétition pour la 2ᵉ fois après 1988.
+
+                        Le Maroc, reconnu pour ses infrastructures sportives modernes et son histoire footballistique riche, a été choisi pour accueillir cette CAN après le retrait de la Guinée. Cette édition marquera un tournant en raison de son organisation en hiver, une première depuis l’édition de 2010 en Angola, afin d’éviter les fortes chaleurs estivales et de s’adapter au calendrier européen.</p>
+                    <p class="card-text">La Coupe d'Afrique des Nations (CAN) 2025 se déroulera au Maroc du 21 décembre 2025 au 18 janvier 2026. Cette 35ᵉ édition réunira 24 équipes réparties en six groupes de quatre. Les deux premières équipes de chaque groupe, ainsi que les quatre meilleurs troisièmes, accéderont aux huitièmes de finale.<br>Le match d'ouverture opposera le Maroc aux Comores le 21 décembre 2025 au Complexe Sportif Prince Moulay Abdellah de Rabat. La finale est prévue dans le même stade le 18 janvier 2026. Les rencontres se dérouleront dans six villes marocaines :<br>Rabat, Casablanca, Marrakech, Agadir, Fès et Tanger.<br>Voici la composition des groupes :<br><ul><li>Groupe A : Maroc, Mali, Zambie, Comores</li><li>Groupe B : Égypte, Afrique du Sud, Angola, Zimbabwe</li><li>Groupe C : Nigeria, Tunisie, Ouganda, Tanzanie</li><li>Groupe D : Sénégal, RD Congo, Bénin, Botswana</li><li>Groupe E : Algérie, Burkina Faso, Guinée équatoriale, Soudan</li><li>Groupe F : Côte d'Ivoire, Cameroun, Gabon, Mozambique</li><br>Le calendrier détaillé des matchs est disponible sur le site officiel de la CAF. Les billets seront mis en vente prochainement, avec des options pour des places standard et VIP. Les rencontres seront diffusées en direct sur plusieurs chaînes partenaires à travers le monde.<br>Pour plus d'informations, veuillez consulter le site officiel de la CAF : <a href="www.cafonline.com">www.cafonline.com</a></ul></p>
+                    <p class="card-text">Lieu : Maroc (Rabat, Casablanca, Tanger, Marrakech, Agadir, Fès)</p>
+                    <p class="card-text">Date : 21 décembre 2025 - 18 janvier 2026</p>
+                    <a href="#" class="btn btn-primary">S'inscrire</a>
+                </div>
+            </div>
+        </section>
+        <section class="my-4">
+            <h2>Détail de l'Événement</h2>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">IMM 2025 (Industry Meeting Days)</h5>
+                    <p class="card-text">Le Industry Meeting Days (IMM) 2025 est un événement phare au Maroc, dont la 7ᵉ édition se tiendra du 26 au 28 mai 2025 au Hyatt Regency Casablanca. Organisé par Industrie du Maroc Magazine, cet événement rassemble plus de 3 000 acteurs de renom du secteur économique et industriel, attirant près de 5 000 visiteurs nationaux et internationaux.<br><h5>Objectifs de l'IMM 2025 :</h5><br><ul>
+                        <li>Promotion de l'innovation industrielle : Servir de vitrine aux solutions innovantes pour l'industrie et de tremplin pour les nouvelles technologies sur le marché international.</li>
+                        <li>Renforcement des partenariats : Faciliter les rencontres entre professionnels pour accélérer les investissements et les collaborations dans le secteur industriel.</li>
+                        <li>Mise en avant du Maroc : Consolider la position du Maroc en tant que plateforme d'affaires incontournable en Afrique.</li>
+                    </ul></p>
+                    <p class="card-text"><h5>Programme et Activités</h5><br>L'IMM 2025 propose un programme riche et diversifié, incluant :<br><ul><li>Conférences et Keynotes : Des experts nationaux et internationaux aborderont les tendances émergentes et les défis actuels de l'industrie.</li>
+                    <li>Ateliers et Side Events : Sessions interactives animées par des professionnels pour approfondir des thématiques spécifiques.</li>
+                <li>Opportunités de Networking : Moments dédiés aux échanges entre participants pour favoriser les collaborations et les partenariats.</li>
+            <li>Cérémonie des Industry Awards 2025 : Récompense des entreprises et individus s'étant distingués par leurs performances et innovations exceptionnelles.</li></ul></p>
+                    <p class="card-text">Lieu : Hyatt Regency Casablanca, Maroc</p>
+                    <p class="card-text">Date : 26 au 28 mai 2025</p>
+                    <a href="#" class="btn btn-primary">S'inscrire</a>
+                </div>
+            </div>
+            <h2>Galerie</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="galerie1.jpg" class="img-fluid" alt="Gallery Image 1">
+                </div>
+                <div class="col-md-4">
+                    <img src="can1.jpg" class="img-fluid" alt="Gallery Image 2">
+                </div>
+                <div class="col-md-4">
+                    <img src="IMM3.jpeg" class="img-fluid" alt="Gallery Image 3">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="text-center p-3 bg-dark text-white">
         <p>Contacter-nous : <a href="mailto:HyperSaga@gmail.com" class="text-white">HyperSaga@gmail.com</a></p>
         <p>Suivez-nous sur :
