--- a/event.html
+++ b/event.html
@@ -103,10 +103,7 @@
                 <li class="nav-item"><a class="nav-link text-white" href="event.html">Events</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="about.html">A propos</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="container">
+            </ul><main class="container">
         <section class="my-4 container">
             <div id="eventCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -207,6 +204,9 @@
             </div>
         </section>
     </main>
+        </nav>
+    </header>
+    
     <footer class="text-center p-3 bg-dark text-white">
         <p>Contacter-nous : <a href="mailto:HyperSaga@gmail.com" class="text-white">HyperSaga@gmail.com</a></p>
         <p>Suivez-nous sur :
